--- a/pages/analisisdemercado.html
+++ b/pages/analisisdemercado.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Las ultimas noticias sobre el mundo Crypto,Bitcoin,Altcoins y Analisis de Mercado a toda hora">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;1,200;1,400;1,500&family=Roboto+Mono:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Analisis de Mercado</title>
+    <title>Analisis de Mercado|Ultimos Analisis sobre el mercado Crypto|Analisis del precio de Bitcoin!Analisis del precio de Altcoins|Analisis del Grafico actual de Bitcoin|Analisis del precio de Ethereum|Analisis del Futuro de Bitcoin|Analisis del Futuro de Ethereum y Altcoins</title>
 </head>
 <body>
     <header class="header">
