--- a/pages/noticiasaltcoins.html
+++ b/pages/noticiasaltcoins.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Las ultimas noticias sobre el mundo Crypto,Bitcoin,Altcoins y Analisis de Mercado a toda hora">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;1,200;1,400;1,500&family=Roboto+Mono:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Noticias Altcoins</title>
+    <title>Noticias Altcoins|Ultimas Noticias sobre Altcoins|Noticias exclusivas sobre SOL,RUNE,BNB,DOT,|Ultimos precios en Altcoins|</title>
 </head>
 <body>
     
 
     <header class="header">
         <h1 class="header__titulo">FundamentalCoin</h1>
-        <img src="./img/Btc3.avif" alt="Bitcoin" class="header__logo">
+        <img src="../img/BTC8.png" alt="Bitcoin" class="header__logo">
 
     <h5 class="idioma">Idioma:</h5>
     <ul class="idioma__lista">
@@ -111,7 +113,9 @@
 
         <section class="video">
             <h4 class="video__titulo">Mas sobre Altcoins</h4>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Wa66FmjjSSc?si=_gyFyntkWnf9NUfR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="video__iframe"></iframe>
+            <article class="video__articulo">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Wa66FmjjSSc?si=_gyFyntkWnf9NUfR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="video__iframe"></iframe>
+            </article>
         </section>
 
         <section class="EleccionDE">
@@ -149,6 +153,8 @@
                 <li class="footer__item"><a class="footer__link" href="./noticiasethereum.html">Noticias Ethereum</a></li>
 
                 <li class="footer__item"><a class="footer__link" href="#nsa">Noticias Altcoins</a></li>
+
+                <li class="footer__item"><a class="footer__link" href="./pages/analisisdemercado.html">Analisis de Mercado</a></li>
 
             </ul>
         </div>
