--- a/pages/noticiasbitcoin.html
+++ b/pages/noticiasbitcoin.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Las ultimas noticias sobre el mundo Crypto,Bitcoin,Altcoins y Analisis de Mercado a toda hora">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;1,200;1,400;1,500&family=Roboto+Mono:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Noticias Bitcoin</title>
+    <title>Noticias Bitcoin|Ultimas Noticias sobre Bitcoin|Noticias semanas de Bitcoin|Noticias de ultima hora sobre Bitcoin</title>
 </head>
 <body>
   <header class="header">
     <h1 class="header__titulo">FundamentalCoin</h1>
-    <img src="./img/Btc3.avif" alt="Bitcoin" class="header__logo">
+    <img src="../img/BTC8.png" alt="Bitcoin" class="header__logo">
 
     <h5 class="idioma">Idioma:</h5>
     <ul class="idioma__lista">
@@ -151,6 +153,8 @@
         <li class="footer__item"><a class="footer__link" href="./noticiasethereum.html">Noticias Ethereum</a></li>
 
         <li class="footer__item"><a class="footer__link" href="./noticiasaltcoins.html">Noticias Altcoins</a></li>
+
+        <li class="footer__item"><a class="footer__link" href="./pages/analisisdemercado.html">Analisis de Mercado</a></li>
         
       </ul>
     </div>
