--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
         
 
-        <img src="./img/BTC8.png" alt="Bitcoin" class="header__logo">
+        <img src="./img/BTC8.png" alt="Bitcoin" class="header__logo"  data-aos="zoom-in">
 
         <h4 class="idioma">Idioma:</h4>
         <ul class="idioma__lista">
