--- a/pages/noticiasethereum.html
+++ b/pages/noticiasethereum.html
@@ -16,7 +16,7 @@
 <body>
    <header class="header">
     <h1 class="header__titulo">FundamentalCoin</h1>
-    <img src="../img/BTC8.png" alt="Bitcoin" class="header__logo">
+    <img src="../img/BTC8.png" alt="Bitcoin" class="header__logo"  data-aos="zoom-in">
 
     <h5 class="idioma">Idioma:</h5>
     <ul class="idioma__lista">
